[gd_scene load_steps=15 format=3 uid="uid://de3dgkf4idjlf"]

[ext_resource type="Script" uid="uid://f8nbipb8cl0p" path="res://scenes/satan/satan.gd" id="1_1r5am"]
[ext_resource type="Texture2D" uid="uid://c7x8n16s50dpt" path="res://assets/sprites/satan_sheet.png" id="2_1r5am"]
[ext_resource type="Texture2D" uid="uid://sw6bl8vwrmhn" path="res://assets/sprites/particle_devil_death.png" id="3_icqm4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y0yq6"]
radius = 20.0
height = 64.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1r5am"]
radius = 15.0
height = 64.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q7fts"]
bg_color = Color(1, 0, 0, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3pcxg"]
bg_color = Color(0, 1, 0, 0.501961)

[sub_resource type="Animation" id="Animation_icqm4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AreaHitbox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AreaHitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_1r5am"]
resource_name = "attack_left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AreaHitbox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AreaHitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-16, 0), Vector2(-32, 0), Vector2(-16, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_y0yq6"]
resource_name = "attack_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 3, 4, 3, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AreaHitbox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AreaHitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(16, 0), Vector2(32, 0), Vector2(16, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y0yq6"]
_data = {
&"RESET": SubResource("Animation_icqm4"),
&"attack_left": SubResource("Animation_1r5am"),
&"attack_right": SubResource("Animation_y0yq6")
}

[sub_resource type="Curve" id="Curve_y0yq6"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_q7fts"]
curve = SubResource("Curve_y0yq6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3pcxg"]
particle_flag_disable_z = true
radial_velocity_min = -500.0
radial_velocity_max = 500.0
gravity = Vector3(0, 0, 0)
alpha_curve = SubResource("CurveTexture_q7fts")

[node name="Satan" type="CharacterBody2D" groups=["enemy", "entity"]]
collision_layer = 8
script = ExtResource("1_1r5am")

[node name="CollisionShapeHurtbox" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_y0yq6")

[node name="AreaHitbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShapeHitbox" type="CollisionShape2D" parent="AreaHitbox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1r5am")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_1r5am")
hframes = 5
region_rect = Rect2(0, 0, 128, 64)

[node name="TimerShoot" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
autostart = true

[node name="TimerAttack" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
autostart = true

[node name="ProgressBarHitpoints" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -16.0
offset_top = -40.0
offset_right = 16.0
offset_bottom = -36.0
theme_override_styles/background = SubResource("StyleBoxFlat_q7fts")
theme_override_styles/fill = SubResource("StyleBoxFlat_3pcxg")
value = 50.0
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_y0yq6")
}

[node name="Particles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 1000
texture = ExtResource("3_icqm4")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_3pcxg")

[connection signal="body_entered" from="AreaHitbox" to="." method="_on_area_hitbox_body_entered"]
[connection signal="timeout" from="TimerShoot" to="." method="_on_timer_shoot_timeout"]
[connection signal="timeout" from="TimerAttack" to="." method="_on_timer_attack_timeout"]
